--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #container{
+            display: flex;
+            justify-content: space-evenly;
+            background-color: teal;
+            color:white;
+            font-size: 30px;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>git here</h1>
+    <div id="container">
+        <div>Home</div>
+        <div href="#">About</div>
+        <div>Contact us</div>
+    </div>
     
 </body>
 </html>
