--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div>Home</div>
         <div href="#">About</div>
         <div>Contact us</div>
+        <div>Login</div>
+        <div>Signup</div>
     </div>
     
 </body>
